--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,14 +1,14 @@
 <div class="header">
   <ul class="nav nav-pills pull-right">
     <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#">About</a></li>
-    <li><a ng-href="#">Contact</a></li>
+    <li><a ng-href="#">South Carolina Barrier Islands</a></li>
+    <li><a ng-href="#">Activities</a></li>
   </ul>
   <h3 class="text-muted">ngbarrierislands</h3>
 </div>
 
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1></h1>
   <p class="lead">
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
     Always a pleasure scaffolding your apps.
