views and routes

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,16 +10,16 @@
 <div class="jumbotron">
   <h1></h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <img src="images/iopbeach.jpg" alt="IOP BEACH"><br>
+    
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
+  <p><a class="btn btn-lg btn-success" ng-href="#">EXLORE THE ISLANDS!</a></p>
 </div>
 
 <div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
+  <h4>INFO AND LINK TO HISTORY OF SC BARRIER ISLANDS</h4>
   <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+    lorem ipsum
   </p>
 
   <h4>Angular</h4>
