--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,8 @@
 <div class="header">
   <ul class="nav nav-pills pull-right">
     <li class="active"><a ng-href="#">Home</a></li>
-    <li><a ng-href="#">South Carolina Barrier Islands</a></li>
-    <li><a ng-href="#">Activities</a></li>
+    <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
+    <li><a ng-href="#/activities">Activities</a></li>
   </ul>
   <h3 class="text-muted">ngbarrierislands</h3>
 </div>
