--- a/app/views/scbarrierislands.html
+++ b/app/views/scbarrierislands.html
@@ -3,6 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>SC BARRIER ISLANDS PAGE</title>
+	<div class="header">
+  <ul class="nav nav-pills pull-right">
+    <li class=""><a ng-href="#/main">Home</a></li>
+    <li><a ng-href="#">South Carolina Barrier Islands</a></li>
+    <li><a ng-href="#/activities">Activities</a></li>
+  </ul>
+  <h3 class="text-muted">ngbarrierislands</h3>
+</div>
 </head>
 <body>
 	
