changes to views styles and added history html page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,7 +25,7 @@ body {
 
 /* Custom page header */
 .header {
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 5px solid black;
 }
 
 /* Make the masthead heading the same height as the navigation */
@@ -82,7 +82,7 @@ body {
     }
     /* Space out the masthead */
     .header {
-        margin-bottom: 30px;
+        margin-bottom: 50px;
     }
     /* Remove the bottom border on the jumbotron for visual effect */
     .jumbotron {
