--- a/app/views/activities.html
+++ b/app/views/activities.html
@@ -5,11 +5,12 @@
 	<title>ACTIVITIES</title>
 	<div class="header">
   <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="#/main">Home</a></li>
+    <li class=""><a ng-href="#/main">Home</a></li>
+    <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
     <li><a ng-href="#">Activities</a></li>
   </ul>
-  <h3 class="text-muted">ngbarrierislands</h3>
+  <h3 class="text-muted">SC Barrier Islands</h3>
 </div>
 </head>
 <body>
