--- a/app/views/history.html
+++ b/app/views/history.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>SC BARRIER ISLANDS PAGE</title>
+	<title>
+	</title>
 	<div class="header">
   <ul class="nav nav-pills pull-right">
     <li class=""><a ng-href="#/main">Home</a></li>
-    <li><a ng-href="#/history">History</a></li>
-    <li><a ng-href="#">South Carolina Barrier Islands</a></li>
+    <li><a ng-href="#">History</a></li>
+    <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
     <li><a ng-href="#/activities">Activities</a></li>
 
   </ul>
   <h3 class="text-muted">SC Barrier Islands</h3>
 </div>
+
 </head>
 <body>
 	
