--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,10 +1,17 @@
-<div class="header">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>SC BARRIER ISLANDS PAGE</title>
+
+  <div class="header">
   <ul class="nav nav-pills pull-right">
     <li class="active"><a ng-href="#">Home</a></li>
+    <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
     <li><a ng-href="#/activities">Activities</a></li>
   </ul>
-  <h3 class="text-muted">ngbarrierislands</h3>
+  <h3 class="text-muted">SC Barrier Islands</h3>
 </div>
 
 <div class="jumbotron">
