styless and buills island map added

--- a/app/views/activities.html
+++ b/app/views/activities.html
@@ -17,3 +17,6 @@
 	
 </body>
 </html>
+<div class="footer">
+  <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
+</div>
