--- a/app/views/history.html
+++ b/app/views/history.html
@@ -20,3 +20,6 @@
 	
 </body>
 </html>
+<div class="footer">
+  <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
+</div>
