--- a/app/views/main.html
+++ b/app/views/main.html
@@ -39,5 +39,5 @@
 </div>
 
 <div class="footer">
-  <p>♥ from the Yeoman team</p>
+  <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
 </div>
