--- a/app/views/scbarrierislands.html
+++ b/app/views/scbarrierislands.html
@@ -15,6 +15,19 @@
 </div>
 </head>
 <body>
+
+	<div>
+  <h1>THE BEACH HOUSE</h1>
+  <p class="lead">
+    <img src="images/edistosunset.jpg" alt="Charleston"><br>
+    THE EDISTO LIFE
+  </p>
+  <p><a class="btn btn-lg btn-default" ng-href="#">Explore Edisto</a></p>
+</div>
 	
 </body>
 </html>
+
+<div class="footer">
+  <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
+</div>
