--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -50,12 +50,13 @@ body {
 /* Main marketing message and sign up button */
 .jumbotron {
     text-align: center;
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #39257c;
 }
 
 .jumbotron .btn {
     font-size: 21px;
     padding: 14px 24px;
+    color: #39257c;
 }
 
 /* Supporting marketing content */
@@ -89,4 +90,7 @@ body {
         border-bottom: 0;
     }
 }
+    // STARTING KAT STYLES
+
+    
 
