let the map show up

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,6 +14,16 @@
   <h3 class="text-muted">SC Barrier Islands</h3>
 </div>
 
+<h1>Angular-Google-Maps by Katherine Mattison</h1>
+
+<google-map center="{latitude: 30, Longitude: -120}" zoom="12">
+
+</google-map>
+
+
+
+
+
 <div class="jumbotron">
   <h1></h1>
   <p class="lead">
