--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,10 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 
 @import 'sass-bootstrap/lib/bootstrap';
 
+.angular-google-map-container {
+    height: 400px;
+}
+
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
