baby weve got maps on the scbarrierislands html page and the center is good ole mtp

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,9 +14,9 @@
   <h3 class="text-muted">SC Barrier Islands</h3>
 </div>
 
-<h1>Angular-Google-Maps by Katherine Mattison</h1>
+<!-- <h1>Angular-Google-Maps by Katherine Mattison</h1> -->
 
-<google-map center="map.center" zoom="map.zoom">
+<!-- <google-map center="map.center" zoom="map.zoom">
 
   <marker coords="marker.coords"> </marker>
 
@@ -25,7 +25,7 @@
     </marker>
 
 </google-map>
-
+ -->
 
 
 
@@ -36,7 +36,7 @@
     <img src="images/iopbeach.jpg" alt="IOP BEACH"><br>
     
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">EXLORE THE ISLANDS!</a></p>
+  <p><a class="btn btn-lg btn-success" ng-href="#/scbarrierislands">EXLORE THE ISLANDS!</a></p>
 </div>
 
 <div class="row marketing">
