--- a/app/views/history.html
+++ b/app/views/history.html
@@ -17,7 +17,9 @@
 
 </head>
 <body>
-	
+	<p class="lead">
+    <img src="images/charlesongatebw.jpg" alt="Bulls Island"><br>
+  </p>
 </body>
 </html>
 <div class="footer">
