--- a/app/views/main.html
+++ b/app/views/main.html
@@ -30,14 +30,13 @@
 
 
 
-<div class="jumbotron">
+<!-- <div class="jumbotron"> -->
   <h1></h1>
   <p class="lead">
     <img src="images/iopbeach.jpg" alt="IOP BEACH"><br>
-    
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/scbarrierislands">EXLORE THE ISLANDS!</a></p>
-</div>
+  <!-- <p><a class="btn btn-lg btn-success" ng-href="#/scbarrierislands">EXLORE THE ISLANDS!</a></p>
+</div> -->
 
 <div class="row marketing">
   <h4>INFO AND LINK TO HISTORY OF SC BARRIER ISLANDS</h4>
