--- a/app/views/activities.html
+++ b/app/views/activities.html
@@ -14,7 +14,9 @@
 </div>
 </head>
 <body>
-	<p>lorem ipsum   
+	<div class="lead">
+    <img src="images/sand_texture_and_the_sea_198441.jpg" alt="IOP BEACH"><br>
+  </div> 
 </body>
 </html>
 <div class="footer">
