tired things are coming along EOB for me

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,7 +6,7 @@
 
   <div class="header">
   <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="#">Home</a></li>
+    <li class=""><a ng-href="#">Home</a></li>
     <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
     <li><a ng-href="#/activities">Activities</a></li>
@@ -30,13 +30,14 @@
 
 
 
-<!-- <div class="jumbotron"> -->
+<div>
   <h1></h1>
   <p class="lead">
-    <img src="images/iopbeach.jpg" alt="IOP BEACH"><br>
+    <!-- <img src="images/iopbeach.jpg" alt="IOP BEACH"><br> -->
+    <img src="images/sand_sea.jpg" alt=scbarrierislands ng-href="#/scbarrierislands"><br>
   </p>
-  <!-- <p><a class="btn btn-lg btn-success" ng-href="#/scbarrierislands">EXLORE THE ISLANDS!</a></p>
-</div> -->
+  <p><a class="btn btn-lg btn-default" ng-href="#/scbarrierislands">EXLORE THE ISLANDS!</a></p>
+</div>
 
 <div class="row marketing">
   <h4>INFO AND LINK TO HISTORY OF SC BARRIER ISLANDS</h4>
