trying to creat the back-ground image with opacity also working on markers linking to spec island urls ...possible addition of groupon if approved...should hear from them today

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,6 +17,7 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 body {
     padding-top: 20px;
     padding-bottom: 20px;
+    background-image: url("/images/sand_texture_and-the_sea_198441.jpg");
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
