adding in messages to the main js with messages in the main js in order to have the markers go somewhere

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,6 +39,8 @@ body {
     margin-bottom: 0;
     line-height: 40px;
     padding-bottom: 19px;
+    color: #25277c;
+    font-style: oblique;
 }
 
 /* Custom page footer */
