--- a/app/views/history.html
+++ b/app/views/history.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<p class="lead">
-    <img src="images/charlesongatebw.jpg" alt="Bulls Island"><br>
+    <img src="images/shemcreekevening8.4.14.jpg" alt="Shem Creek Beautiful Evening"><br>
   </p>
 </body>
 </html>
