soooooo close now just tags on markers then deploy with Calvin in the morning

--- a/app/views/activities.html
+++ b/app/views/activities.html
@@ -10,12 +10,13 @@
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
     <li><a ng-href="#">Activities</a></li>
   </ul>
-  <h3 class="text-muted">SC Barrier Islands</h3>
+  <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
 </div>
 </head>
 <body>
+  <h2>Dive In and Explore!</h2>
 	<div class="lead">
-    <img src="images/sand_texture_and_the_sea_smaller.jpg" alt="IOP BEACH"><br>
+    <img src="images/smiledolphin.jpg" alt="Smiling Dolphin"><br>
   </div> 
 </body>
 </html>
