--- a/app/views/history.html
+++ b/app/views/history.html
@@ -12,7 +12,7 @@
     <li><a ng-href="#/activities">Activities</a></li>
 
   </ul>
-  <h3 class="text-muted">SC Barrier Islands</h3>
+  <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
 </div>
 
 </head>
@@ -20,6 +20,21 @@
 	<p class="lead">
     <img src="images/shemcreekevening8.4.14.jpg" alt="Shem Creek Beautiful Evening"><br>
   </p>
+
+  <h3><a ng-href="http://www.southcarolinalowcountry.com/visitors/nature-tourism/beaches.html">The Barrier Islands</a></h3>
+  <img src="images/barrierislandpic.jpeg">
+  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe!</p>
+  
+  <h3><a ng-href="http://www.fws.gov/refuge/ACE_basin/">ACE Basin</a></h3>
+  <img src="images/acebasin.jpg">
+  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe!</p>
+
+  <h3><a ng-href="http://en.wikipedia.org/wiki/Category:Hurricanes_in_South_Carolina">Hurricane Season</a></h3>
+ <img src="images/Hurricane_Hugo_15_September_1989_1105z.png">
+  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe!</p>
+  <h3><a ng-href="http://www.nps.gov/nr/testing/cultural_groups/Gullah_Geechee_Cultural_Heritage_Corridor.html">Gullah/Geechee Culture</a></h3>
+  <img src="images/gullahgeechieculture.jpg">
+  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe!</p>
 </body>
 </html>
 <div class="footer">
