--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,39 +5,22 @@
   <title>SC BARRIER ISLANDS PAGE</title>
 
   <div class="header">
-  <ul class="nav nav-pills pull-right">
-    <li class=""><a ng-href="#">Home</a></li>
-    <li><a ng-href="#/history">History</a></li>
-    <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
-    <li><a ng-href="#/activities">Activities</a></li>
-  </ul>
-  <h3 class="text-muted">SC Barrier Islands</h3>
-</div>
-
-
-<div>
-  <h1></h1>
-    <p class="lead">
+    <ul class="nav nav-pills pull-right">
+      <li class=""><a ng-href="#">Home</a></li>
+      <li><a ng-href="#/history">History</a></li>
+      <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
+      <li><a ng-href="#/activities">Activities</a></li>
+    </ul>
+  <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
+  </div>
+  <body>
       <!-- <img src="images/iopbeach.jpg" alt="IOP BEACH"><br> -->
       <img src="images/sand_sea.jpg" alt=scbarrierislands ng-href="#/scbarrierislands"><br>
-    </p>
+  
     <p><a class="btn btn-lg btn-default" ng-href="#/scbarrierislands">EXLORE THE ISLANDS!</a></p>
-</div>
+  </body>  
 
-<div class="row marketing">
-  <h4>INFO AND LINK TO HISTORY OF SC BARRIER ISLANDS</h4>
-  <p>
-    lorem ipsum
-  </p>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
 
  <div class="footer">
   <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
