--- a/app/views/scbarrierislands.html
+++ b/app/views/scbarrierislands.html
@@ -11,7 +11,7 @@
     <li><a ng-href="#/activities">Activities</a></li>
 
   </ul>
-  <h3 class="text-muted">SC Barrier Islands</h3>
+  <h3 class="text-muted"><a ng-href="#/history">SC Barrier Islands</a></h3>
 </div>
 </head>
 <body>
@@ -26,7 +26,7 @@
 
   <h1>South Carolina Barrier Islands</h1>
 
-<google-map center="map.center" zoom="map.zoom">
+  <google-map center="map.center" zoom="map.zoom">
 
   <marker coords="marker.coords"> </marker>
 
@@ -37,7 +37,28 @@
 </google-map>
 
 </div>
-	
+<br>
+  
+</br>
+<div>
+<h2>Explore a Few of Our Favorite Islands!</h2>
+  <ul>
+    <li><a ng-href="#/history">Bulls Island</a></li>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita praesentium numquam soluta est, nihil excepturi delectus optio, sit, eius sequi enim. Reiciendis maxime quo blanditiis, qui quisquam iure expedita.</p>
+    <li><a ng-href="http://www.charlestoncvb.com/beaches/sullivans-island/">Sullivan's Island</a></li>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita praesentium numquam soluta est, nihil excepturi delectus optio, sit, eius sequi enim. Reiciendis maxime quo blanditiis, qui quisquam iure expedita.</p>
+    <li><a ng-href="http://en.wikipedia.org/wiki/Edisto_Island,_South_Carolina">Fripp Island</a></li>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita praesentium numquam soluta est, nihil excepturi delectus optio, sit, eius sequi enim. Reiciendis maxime quo blanditiis, qui quisquam iure expedita.</p>
+    <li><a ng-href="http://en.wikipedia.org/wiki/Edisto_Island,_South_Carolina">Edisto Island</a></li>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita praesentium numquam soluta est, nihil excepturi delectus optio, sit, eius sequi enim. Reiciendis maxime quo blanditiis, qui quisquam iure expedita.</p>
+    <li><a ng-href="http://www.hiltonheadisland.org/about-the-island/">Hilton Head</a></li>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita praesentium numquam soluta est, nihil excepturi delectus optio, sit, eius sequi enim. Reiciendis maxime quo blanditiis, qui quisquam iure expedita.</p>
+    <li><a ng-href="http://www.charlestoncvb.com/beaches/isle-of-palms/">Isle of Palms</a></li>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita praesentium numquam soluta est, nihil excepturi delectus optio, sit, eius sequi enim. Reiciendis maxime quo blanditiis, qui quisquam iure expedita.</p>
+    <li><a ng-href="http://www.hiltonheadisland.org/daufuskie-island/">Daufuskie Island</a></li>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita praesentium numquam soluta est, nihil excepturi delectus optio, sit, eius sequi enim. Reiciendis maxime quo blanditiis, qui quisquam iure expedita.</p>
+    <li><a ng-href="http://www.hiltonheadisland.org/daufuskie-island/">Folly Beach</a></li>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita praesentium numquam soluta est, nihil excepturi delectus optio, sit, eius sequi enim. Reiciendis maxime quo blanditiis, qui quisquam iure expedita.</p>
 </body>
 </html>
 
