--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,6 +4,8 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 
 .angular-google-map-container {
     height: 400px;
+    width: 700px;
+    border: 4px solid black;
 }
 
 .browsehappy {
@@ -15,9 +17,16 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 
 /* Space out content a bit */
 body {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    // padding-top: 20px;
+    // padding-bottom: 20px;
+    // background-color: #D3D3D3;
     background-image: url("/images/sand_texture_and-the_sea_198441.jpg");
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: top center !important;
+    background-repeat: no-repeat !important;
+    background-attachment: fixed;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -39,8 +48,9 @@ body {
     margin-bottom: 0;
     line-height: 40px;
     padding-bottom: 19px;
-    color: #25277c;
+    color: #459300;
     font-style: oblique;
+    font-weight: bold;
 }
 
 /* Custom page footer */
@@ -61,9 +71,12 @@ body {
 }
 
 .jumbotron .btn {
+    text-align: center;
+    text-shadow: 5px;
     font-size: 21px;
     padding: 14px 24px;
     color: #39257c;
+    box-shadow: 5px, 5px, 5px, 5px, #777777;
 }
 
 /* Supporting marketing content */
@@ -99,5 +112,43 @@ body {
 }
     // STARTING KAT STYLES
 
+    .h1 {
+        color: #0948AD;
+
+    }
+
+    .header {
+        // color: 
+        font-family: Arial, Verdana, sans-serif;
+
+    }
+    // .btn btn-lg btn-default {
+    //     box-shadow
+        
+    // }
+    .h4 {
+        color: #034A99;
+    }
+
+    .h3 {
+        color: dark blue;
+
+    }
     
+    .a:visited {
+        color: black;
+    }
+
+    .a:hover {
+        color: dark blue;
+
+    }
+
+    .h2 {
+        font-style: oblique;
+        font-weight: bold;
+        color: navy blue;
+    }
+
+
 
