--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>SC BARRIER ISLANDS PAGE</title>
+</head>
 
   <div class="header">
     <ul class="nav nav-pills pull-right">
@@ -13,15 +14,16 @@
     </ul>
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
   </div>
-  <body>
-      <!-- <img src="images/iopbeach.jpg" alt="IOP BEACH"><br> -->
-      <img src="images/sand_sea.jpg" alt=scbarrierislands ng-href="#/scbarrierislands"><br>
+
+  <div class='body'>
+      
+      <img src="images/sand_sea.jpg" alt=scbarrierislands ng-href="#/history"><br>
   
     <p><a class="btn btn-lg btn-default" ng-href="#/scbarrierislands">EXLORE THE ISLANDS!</a></p>
-  </body>  
+  </div>  
 
 
 
- <div class="footer">
+  <div class="footer">
   <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
-</div>
+  </div>
