--- a/app/views/practice.html
+++ b/app/views/practice.html
@@ -10,12 +10,16 @@
       <h1>South Carolina Barrier Islands</h1>
       <nav>
         <ul class="nav nav-pills pull-right">
-      <li class=""><a ng-href="#">Home</a></li>
-      <li><a ng-href="#/history">History</a></li>
-      <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
-      <li><a ng-href="#/activities">Activities</a></li>
-      <li><a ng-href="#/practice">Practice</a></li>
-    </ul>
+          <li><a ng-href="#/main">Home</a></li>
+          <li><a ng-href="#/history">History</a></li>
+          <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
+          <li><a ng-href="#/activities">Activities</a></li>
+          <li><a ng-href="#">Practice</a></li>
+        </ul>
+      </nav>
+     </header> 
+    
+    
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
   </div>
 
