--- a/app/views/history.html
+++ b/app/views/history.html
@@ -10,6 +10,7 @@
     <li><a ng-href="#">History</a></li>
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
     <li><a ng-href="#/activities">Activities</a></li>
+    <li><a ng-href="#/practice">Practice</a></li>
 
   </ul>
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
