--- a/app/views/scbarrierislands.html
+++ b/app/views/scbarrierislands.html
@@ -9,6 +9,7 @@
     <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#">South Carolina Barrier Islands</a></li>
     <li><a ng-href="#/activities">Activities</a></li>
+    <li><a ng-href="#/practice">Practice</a></li>
 
   </ul>
   <h3 class="text-muted"><a ng-href="#/history">SC Barrier Islands</a></h3>
