making some dramatic changes might not look like it but learning in the process re styling

--- a/app/views/history.html
+++ b/app/views/history.html
@@ -2,19 +2,25 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>
-	</title>
-	<div class="header">
-  <ul class="nav nav-pills pull-right">
-    <li class=""><a ng-href="#/main">Home</a></li>
-    <li><a ng-href="#">History</a></li>
-    <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
-    <li><a ng-href="#/activities">Activities</a></li>
-    <li><a ng-href="#/practice">Practice</a></li>
+	<title>SC Barrier Islands History Page</title>
+</head>
+<body>
+	<div class="wrapper">
+    <header>
+      <h1>The Story Behind The Barrier Islands</h1>
+      <nav>
+        <ul class="nav nav-pills pull-right">
+          <li class=""><a ng-href="#/main">Home</a></li>
+          <li><a ng-href="#">History</a></li>
+          <li><a ng-href="#/scbarrierislands">Barrier Islands</a></li>
+          <li><a ng-href="#/activities">Explore</a></li>
+          <li><a ng-href="#/practice">Practice</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  </ul>
-  <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
-</div>
+  <!-- <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3> -->
+
 
 </head>
 <body>
@@ -36,8 +42,10 @@
   <h3><a ng-href="http://www.nps.gov/nr/testing/cultural_groups/Gullah_Geechee_Cultural_Heritage_Corridor.html">Gullah/Geechee Culture</a></h3>
   <img src="images/gullahgeechieculture.jpg">
   <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quia, ut alias nihil blanditiis facilis ea libero cumque mollitia aliquam laborum adipisci, dolorem sunt repellat repellendus, dolorum iure quaerat saepe!</p>
-</body>
-</html>
+
 <div class="footer">
   <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
 </div>
+<!-- </div> .wrapper  -->
+</body>
+</html>
