--- a/app/views/practice.html
+++ b/app/views/practice.html
@@ -10,21 +10,21 @@
       <h1>South Carolina Barrier Islands</h1>
       <nav>
         <ul class="nav nav-pills pull-right">
-          <li><a ng-href="#/main">Home</a></li>
+          <li class=""><a ng-href="#/main">Home</a></li>
           <li><a ng-href="#/history">History</a></li>
-          <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
-          <li><a ng-href="#/activities">Activities</a></li>
+          <li><a ng-href="#/scbarrierislands">Barrier Islands</a></li>
+          <li><a ng-href="#/activities">Explore</a></li>
           <li><a ng-href="#">Practice</a></li>
         </ul>
       </nav>
      </header> 
-    
-    
-  <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
-  </div>
-
-  <div class='body'>
-      
+  <!-- <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3> -->
+  <section class="islands">
+    <article>
+      <figure>
+        <img src="images/bullisland.jpg" alt="Bull Island"/>
+        <figcaption>Bull Island</figcaption>
+      </figure>
       <img src="images/sand_sea.jpg" alt=scbarrierislands ng-href="#/history"><br>
   
     <p><a class="btn btn-lg btn-default" ng-href="#/scbarrierislands">EXLORE THE ISLANDS!</a></p>
