--- a/app/views/scbarrierislands.html
+++ b/app/views/scbarrierislands.html
@@ -7,12 +7,10 @@
   <ul class="nav nav-pills pull-right">
     <li class=""><a ng-href="#/main">Home</a></li>
     <li><a ng-href="#/history">History</a></li>
-    <li><a ng-href="#">South Carolina Barrier Islands</a></li>
-    <li><a ng-href="#/activities">Activities</a></li>
+    <li><a ng-href="#">Barrier Islands</a></li>
+    <li><a ng-href="#/activities">Explore</a></li>
     <li><a ng-href="#/practice">Practice</a></li>
-
   </ul>
-  <h3 class="text-muted"><a ng-href="#/history">SC Barrier Islands</a></h3>
 </div>
 </head>
 <body>
