--- a/app/views/activities.html
+++ b/app/views/activities.html
@@ -8,7 +8,8 @@
     <li class=""><a ng-href="#/main">Home</a></li>
     <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
-    <li><a ng-href="#">Activities</a></li>
+    <li><a ng-href="#">Explore</a></li>
+    <li><a ng-href="#/kackie">Practice</a></li>
   </ul>
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
 </div>
@@ -18,8 +19,9 @@
 	<div class="lead">
     <img src="images/smiledolphin.jpg" alt="Smiling Dolphin"><br>
   </div> 
-</body>
-</html>
 <div class="footer">
   <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
 </div>
+<!-- </div> .wrapper -->
+</body>
+</html>
