--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,12 +14,12 @@
           <li><a ng-href="#/history">History</a></li>
           <li><a ng-href="#/scbarrierislands">Barrier Islands</a></li>
           <li><a ng-href="#/activities">Explore</a></li>
-          <li><a ng-href="#/practice">Practice</a></li>
+          <li><a ng-href="#/kackie">Practice</a></li>
         </ul>
        </nav>
       </header> 
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
-  </div>
+
 
   <div class='body'>
       
@@ -33,3 +33,6 @@
   <div class="footer">
   <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
   </div>
+  <!-- </div> .wrapper -->
+</body>
+</html>
