--- a/app/views/scbarrierislands.html
+++ b/app/views/scbarrierislands.html
@@ -9,7 +9,7 @@
     <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#">Barrier Islands</a></li>
     <li><a ng-href="#/activities">Explore</a></li>
-    <li><a ng-href="#/practice">Practice</a></li>
+    <li><a ng-href="#/kackie">Practice</a></li>
   </ul>
 </div>
 </head>
@@ -39,7 +39,7 @@
 <br>
   
 </br>
-<div>
+
 <h2>Explore a Few of Our Favorite Islands!</h2>
   <ul>
     <li><a ng-href="#/history">Bulls Island</a></li>
@@ -58,9 +58,10 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita praesentium numquam soluta est, nihil excepturi delectus optio, sit, eius sequi enim. Reiciendis maxime quo blanditiis, qui quisquam iure expedita.</p>
     <li><a ng-href="http://www.hiltonheadisland.org/daufuskie-island/">Folly Beach</a></li>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit expedita praesentium numquam soluta est, nihil excepturi delectus optio, sit, eius sequi enim. Reiciendis maxime quo blanditiis, qui quisquam iure expedita.</p>
-</body>
-</html>
 
 <div class="footer">
   <p><a href="http://katherinemattison.com"><span class="glyphicon glyphicon-eye-open"></span> THEKACKIEPROJECT</a></p>
 </div>
+<!-- </div> .wrapper -->
+</body>
+</html>
