added edisto as one of the views or routes

--- a/app/views/history.html
+++ b/app/views/history.html
@@ -14,7 +14,7 @@
           <li><a ng-href="#">History</a></li>
           <li><a ng-href="#/scbarrierislands">Barrier Islands</a></li>
           <li><a ng-href="#/activities">Explore</a></li>
-          <li><a ng-href="#/kackie">Practice</a></li>
+          <li><a ng-href="#/kackie">Edisto</a></li>
         </ul>
       </nav>
     </header>
