--- a/app/views/kackie.html
+++ b/app/views/kackie.html
@@ -14,7 +14,7 @@
           <li><a ng-href="#/history">History</a></li>
           <li><a ng-href="#/scbarrierislands">Barrier Islands</a></li>
           <li><a ng-href="#/activities">Explore</a></li>
-          <li><a ng-href="#">Practice</a></li>
+          <li><a ng-href="#">Edisto</a></li>
         </ul>
       </nav>
      </header> 
@@ -77,7 +77,7 @@
           Although most homes on the island were destroyed in the 1940s, Hurricane Hugo spared the island in 1989. It has since become a vacation destination with a section of the island recently purchased by Wyndham Resorts.[3] In 2012, Edisto held its first ever road race attracting close to 200 runners, including the mayor.[4]</p>
         </section>
       </aside>
-      
+
 
 
   <div class="footer">
