--- a/app/views/scbarrierislands.html
+++ b/app/views/scbarrierislands.html
@@ -9,7 +9,7 @@
     <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#">Barrier Islands</a></li>
     <li><a ng-href="#/activities">Explore</a></li>
-    <li><a ng-href="#/kackie">Practice</a></li>
+    <li><a ng-href="#/kackie">Edisto</a></li>
   </ul>
 </div>
 </head>
