--- a/app/views/activities.html
+++ b/app/views/activities.html
@@ -9,7 +9,7 @@
     <li><a ng-href="#/history">History</a></li>
     <li><a ng-href="#/scbarrierislands">South Carolina Barrier Islands</a></li>
     <li><a ng-href="#">Explore</a></li>
-    <li><a ng-href="#/kackie">Practice</a></li>
+    <li><a ng-href="#/kackie">Edisto</a></li>
   </ul>
   <h3 class="text-muted"><a ng-href="#/scbarrierislands">SC Barrier Islands</a></h3>
 </div>
